# toolbox

./: .gitignore  LICENSE  README.md  TECHNICAL_MEMO.md  pyproject.toml  requirements.txt
apps/format_converter/: .dockerignore  DEPLOY.md  Dockerfile  README.md  dev.bat  dev.sh  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
apps/format_converter/backend/: debug_test.py  pyaudioop.py  quick.py  quick2.py  quick3.py  requirements.txt  test_api.py
apps/format_converter/backend/format_converter/: __init__.py  __main__.py  main.py
apps/format_converter/backend/format_converter/converters/: __init__.py  audio_converter.py  document_converter.py  image_converter.py  video_converter.py
apps/format_converter/backend/format_converter/utils/: __init__.py
apps/format_converter/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
apps/format_converter/frontend/public/: sw.js
apps/format_converter/frontend/src/: App.jsx  index.css  logStore.js  main.jsx
apps/format_converter/frontend/src/api/: index.js
apps/format_converter/frontend/src/components/: Character3D.jsx  DownloadPanel.jsx  DropZone.jsx  FileList.jsx  FormatSelector.jsx  GlobalLogPanel.jsx  (+5 more)
apps/format_converter/resources/licenses/: THIRD_PARTY.md
apps/format_converter/src/format_converter/: __init__.py  __main__.py  main.py  server.py
apps/format_converter/test_resources/: README.md  _run.py  run_and_log.py  run_test.py
apps/format_converter/test_resources/转换前/: audio.aac  audio.aiff  audio.flac  audio.m4a  audio.opus  audio.wma  data.csv  data.json  data.toml  data.xml  data.yaml  doc.doc  doc.docx  doc.epub  doc.html  doc.md  doc.rtf  doc.txt  image.tiff  video.avi  video.flv  video.mkv  video.mov  video.webm  video.wmv
(+114 files in other folders)
