[project]
name = "toolbox"
version = "1.1.0"
description = "个人开发者工具箱 — Web 应用、命令行工具和自动化脚本合集"
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "zhcnhan" }]
keywords = ["toolbox", "utilities", "converter", "tools"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = []
