[project]
name = "format-converter"
version = "2.0.0"
description = "万能格式转换服务 — 前后端分离 Web 应用，支持 40+ 格式互转"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "zhcnhan" }]
keywords = ["converter", "format", "document", "audio", "video", "image", "data", "web", "api"]

[project.scripts]
format-converter = "format_converter.main:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
